@@ -10,19 +10,17 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.shareit.booking.model.Booking;
 import ru.practicum.shareit.booking.repository.BookingRepository;
-import ru.practicum.shareit.item.dto.request.RequestItemDto;
-import ru.practicum.shareit.item.dto.response.DetailedItemDto;
-import ru.practicum.shareit.item.dto.response.ItemDto;
-import ru.practicum.shareit.item.exception.ItemNotFoundException;
+import ru.practicum.shareit.item.dto.request.ItemRequestDto;
+import ru.practicum.shareit.item.dto.response.ItemDetailsResponseDto;
+import ru.practicum.shareit.item.dto.response.SimpleItemResponseDto;
+import ru.practicum.shareit.item.logger.ItemServiceLoggerHelper;
 import ru.practicum.shareit.item.mapper.ItemDtoMapper;
 import ru.practicum.shareit.item.model.Comment;
 import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.item.repository.ItemRepository;
 import ru.practicum.shareit.item.repository.comment.CommentRepository;
-import ru.practicum.shareit.request.model.ItemRequest;
 import ru.practicum.shareit.request.repository.ItemRequestRepository;
 import ru.practicum.shareit.request.service.ItemRequestServiceImpl;
-import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.user.repository.UserRepository;
 
 import java.time.LocalDateTime;
@@ -31,7 +29,7 @@ import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-import static ru.practicum.shareit.user.service.UserServiceImpl.checkUserExistsById;
+import static ru.practicum.shareit.user.service.UserServiceImpl.validateUserExistsById;
 
 @Service
 @RequiredArgsConstructor
@@ -44,170 +42,122 @@ public class ItemServiceImpl implements ItemService {
     private final BookingRepository bookingRepository;
     private final ItemRequestRepository itemRequestRepository;
 
-    public static void checkItemExistsById(ItemRepository itemRepository, Long itemId) {
-        if (!itemRepository.existsById(itemId)) {
-            throw ItemNotFoundException.getFromItemId(itemId);
-        }
-    }
-
-    public static void checkOwnerOfItemByItemIdAndUserId(ItemRepository itemRepository,
-                                                         Long itemId, Long userId) {
-        Long ownerId = itemRepository.getReferenceById(itemId).getOwner().getId();
-
-        if (!ownerId.equals(userId)) {
-            throw ItemNotFoundException.getFromItemIdAndUserId(itemId, userId);
-        }
-    }
-
     @Override
     @Transactional
-    public ItemDto addItem(RequestItemDto itemDto, Long ownerId) {
-        checkUserExistsById(userRepository, ownerId);
-        checkItemRequestExistsById(itemDto.getRequestId());
+    public SimpleItemResponseDto addItem(ItemRequestDto itemDto, Long ownerUserId) {
+        validateUserExistsById(userRepository, ownerUserId);
+        if (itemDto.getRequestId() != null) {
+            ItemRequestServiceImpl.validateItemRequestExistsById(itemRequestRepository, itemDto.getRequestId());
+        }
 
-        Item item = getItem(itemDto, ownerId);
+        Item item = getItem(itemDto, ownerUserId);
         Item savedItem = itemRepository.save(item);
-        log.debug("ITEM[ID_{}] added.", savedItem.getId());
 
-        if (itemDto.getRequestId() == null) {
-            return ItemDtoMapper.toItemDtoWithoutItemRequestId(savedItem);
-        } else {
-            return ItemDtoMapper.toItemDto(savedItem, itemDto.getRequestId());
-        }
+        ItemServiceLoggerHelper.itemSaved(log, savedItem);
+        return ItemDtoMapper.toSimpleItemResponseDto(savedItem);
     }
 
     @Override
     @Transactional
-    public ItemDto updateItem(RequestItemDto itemDto, Long itemId, Long userId) {
-        checkItemExistsById(itemRepository, itemId);
-        checkUserExistsById(userRepository, userId);
-        checkOwnerOfItemByItemIdAndUserId(itemRepository, itemId, userId);
+    public SimpleItemResponseDto updateItem(ItemRequestDto itemDto, Long itemId, Long currentUserId) {
+        itemRepository.validateItemExistsById(itemId);
+        validateUserExistsById(userRepository, currentUserId);
+        itemRepository.validateUserIdIsItemOwner(itemId, currentUserId);
 
-        Item updatedItem = getUpdatedItem(itemDto, itemId, userId);
+        Item updatedItem = getUpdatedItem(itemDto, itemId, currentUserId);
         Item savedItem = itemRepository.save(updatedItem);
-        log.debug("ITEM[ID_{}] updated.", savedItem.getId());
 
-        if (updatedItem.getItemRequest() == null) {
-            return ItemDtoMapper.toItemDtoWithoutItemRequestId(updatedItem);
-        } else {
-            return ItemDtoMapper.toItemDto(savedItem, updatedItem.getItemRequest().getId());
-        }
+        ItemServiceLoggerHelper.itemUpdated(log, savedItem);
+        return ItemDtoMapper.toSimpleItemResponseDto(savedItem);
     }
 
     @Override
-    public DetailedItemDto getItemById(Long itemId, Long userId) {
-        checkItemExistsById(itemRepository, itemId);
+    public ItemDetailsResponseDto getItemById(Long itemId, Long currentUserId) {
+        validateUserExistsById(userRepository, currentUserId);
+        itemRepository.validateItemExistsById(itemId);
 
         Item item = itemRepository.getReferenceById(itemId);
 
-        DetailedItemDto itemDto;
-        if (isOwner(item, userId)) {
+        ItemDetailsResponseDto itemDto;
+        if (item.isOwnedByUserId(currentUserId)) {
             itemDto = getDetailedItemDto(item);
         } else {
             itemDto = getDetailedItemDtoWithoutBookings(item);
         }
-        log.debug("ITEM[ID_{}]<DTO> returned.", itemDto.getId());
+
+        ItemServiceLoggerHelper.itemDtoReturned(log, itemDto);
         return itemDto;
     }
 
     @Override
-    public List<DetailedItemDto> getItemsByOwnerId(Long ownerId, Integer from, Integer size) {
-        checkUserExistsById(userRepository, ownerId);
+    public List<ItemDetailsResponseDto> getItemsByOwnerUserId(Long ownerUserId, Integer from, Integer size) {
+        validateUserExistsById(userRepository, ownerUserId);
 
-        List<DetailedItemDto> itemsByOwnerId
-         = getItemsByOwnerIdWithPagination(ownerId, from, size);
+        Page<Item> items = itemRepository.findAllByOwnerId(ownerUserId, PageRequest.of(from, size));
+        List<ItemDetailsResponseDto> ownerItemDtos = getItemDetailsResponseDtos(items.toList());
 
-        log.debug("All ITEM<DTO> returned, {} in total.", itemsByOwnerId.size());
-        return itemsByOwnerId;
+        ItemServiceLoggerHelper.itemDtosReturned(log, ownerItemDtos);
+        return ownerItemDtos;
     }
 
     @Override
-    public List<ItemDto> searchItemsByNameOrDescription(String text,
-                                                        Integer from, Integer size) {
-        if (StringUtils.isEmpty(text)) {
+    public List<SimpleItemResponseDto> searchItemsByNameOrDescriptionIgnoreCase(
+            String text, Integer from, Integer size
+    ) {
+        if (StringUtils.isBlank(text)) {
             return Collections.emptyList();
         }
 
-        List<ItemDto> foundItemsDto
-      = getItemsByNameOrDescriptionWithPagination(text, from, size);
+        List<Item> foundItems = findItemsByText(text, PageRequest.of(from, size));
+        List<SimpleItemResponseDto> itemDtos = ItemDtoMapper.toSimpleItemResponseDto(foundItems);
 
-        log.debug("All ITEM<DTO> containing '{}' returned, {} in total.", text, foundItemsDto.size());
-        return foundItemsDto;
+        ItemServiceLoggerHelper.itemDtosByTextReturned(log, text, itemDtos);
+        return itemDtos;
     }
 
-    private List<ItemDto> getItemsByNameOrDescriptionWithPagination(String text,
-                                                                    Integer from, Integer size) {
-        Pageable page = PageRequest.of(from, size);
-        List<Item> foundItems = findItemsByText(text, page);
-        return ItemDtoMapper.toItemDto(foundItems);
-    }
+    private Item getItem(ItemRequestDto itemDto, Long ownerUserId) {
+        Item item = ItemDtoMapper.toItem(itemDto);
 
-    private static boolean itemContainsTextInNameOrDescription(Item item, String text) {
-        boolean containsTextInName = StringUtils.containsIgnoreCase(item.getName(), text);
-        boolean containsTextInDescription = StringUtils.containsIgnoreCase(item.getDescription(), text);
-        return containsTextInName || containsTextInDescription;
-    }
+        item.setOwner(userRepository.getReferenceById(ownerUserId));
 
-    private static boolean isOwner(Item item, Long userId) {
-        Long ownerId = item.getOwner().getId();
-        return ownerId.equals(userId);
-    }
-
-    private void checkItemRequestExistsById(Long requestId) {
-        if (requestId != null) {
-            ItemRequestServiceImpl.checkItemRequestExistsById(itemRequestRepository, requestId);
+        if (itemDto.getRequestId() != null) {
+            item.setItemRequest(itemRequestRepository.getReferenceById(itemDto.getRequestId()));
         }
+
+        return item;
     }
 
-    private Item getItem(RequestItemDto itemDto, Long ownerId) {
-        User owner = userRepository.getReferenceById(ownerId);
-        if (itemDto.getRequestId() == null) {
-            return ItemDtoMapper.toItemWithoutItemRequest(itemDto, owner);
-        } else {
-            ItemRequest itemRequest = itemRequestRepository.getReferenceById(itemDto.getRequestId());
-            return ItemDtoMapper.toItem(itemDto, owner, itemRequest);
-        }
-    }
-
-    private Item getUpdatedItem(RequestItemDto itemDto, Long itemId, Long ownerId) {
+    private Item getUpdatedItem(ItemRequestDto itemDto, Long itemId, Long ownerUserId) {
         Item item = itemRepository.getReferenceById(itemId);
+
+        item.setOwner(userRepository.getReferenceById(ownerUserId));
 
         Optional.ofNullable(itemDto.getName()).ifPresent(item::setName);
         Optional.ofNullable(itemDto.getDescription()).ifPresent(item::setDescription);
         Optional.ofNullable(itemDto.getAvailable()).ifPresent(item::setIsAvailable);
 
-        User owner = userRepository.getReferenceById(ownerId);
-        item.setOwner(owner);
-
         return item;
     }
 
     private List<Item> findItemsByText(String text, Pageable page) {
-        return itemRepository.findAllByIsAvailableIsTrue(page).toList()
-                .stream()
-                .filter(item -> itemContainsTextInNameOrDescription(item, text))
-                .collect(Collectors.toList());
+        return itemRepository.findAllByText(text, page).toList();
     }
 
-    private DetailedItemDto getDetailedItemDtoWithoutBookings(Item item) {
-        List<Comment> comments = commentRepository.findAllByItemId(item.getId());
-        return ItemDtoMapper.toDetailedItemDtoWithoutBookings(item, comments);
+    private ItemDetailsResponseDto getDetailedItemDtoWithoutBookings(Item item) {
+        return ItemDtoMapper.toItemDetailsResponseDto(
+                item,
+                commentRepository.findAllByItemId(item.getId()),
+                null,
+                null);
     }
 
-    private List<DetailedItemDto> getItemsByOwnerIdWithPagination(Long ownerId,
-                                                                  Integer from, Integer size) {
-        Pageable page = PageRequest.of(from, size);
-        Page<Item> items = itemRepository.findAllByOwnerId(ownerId, page);
-        return toDetailedItemDto(items.toList());
-    }
-
-    private List<DetailedItemDto> toDetailedItemDto(List<Item> items) {
+    private List<ItemDetailsResponseDto> getItemDetailsResponseDtos(List<Item> items) {
         return items.stream()
                 .map(this::getDetailedItemDto)
                 .collect(Collectors.toList());
     }
 
-    private DetailedItemDto getDetailedItemDto(Item item) {
+    private ItemDetailsResponseDto getDetailedItemDto(Item item) {
         List<Comment> comments = commentRepository.findAllByItemId(item.getId());
         LocalDateTime time = LocalDateTime.now();
 
@@ -219,14 +169,6 @@ public class ItemServiceImpl implements ItemService {
                 .findFirstByItemIdAndStartTimeIsAfter(item.getId(), time)
                 .orElse(null);
 
-        if (lastBooking != null && nextBooking != null) {
-            return ItemDtoMapper.toDetailedItemDto(item, comments, lastBooking, nextBooking);
-        } else if (lastBooking == null && nextBooking == null) {
-            return ItemDtoMapper.toDetailedItemDtoWithoutBookings(item, comments);
-        } else if (lastBooking == null) {
-            return ItemDtoMapper.toDetailedItemDtoWithoutLastBooking(item, comments, nextBooking);
-        } else {
-            return ItemDtoMapper.toDetailedItemDtoWithoutNextBooking(item, comments, lastBooking);
-        }
+        return ItemDtoMapper.toItemDetailsResponseDto(item, comments, lastBooking, nextBooking);
     }
 }
